<resources>
    <string name="app_name">OdinPizzaApp</string>
    <string name="main_item">Главная</string>
    <string name="cabinet_item">Кабинет</string>
    <string name="about_us">О нас</string>
    <string name="back_button">назад</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company">Компания :</string>
    <string name="company_name">Pizza Mafia</string>
    <string name="number">Номер :</string>
    <string name="phone_number">+750-034-03-33</string>
    <string name="email">Email :</string>
    <string name="company_email_value">pizzamafiasupport@ya.com</string>
    <string name="phone_number_client">+7999-032-08-88</string>
    <string name="client_name">Алексей</string>
    <string name="name">Имя :</string>
    <string name="client_email">pizzamafia@ya.com</string>
    <string name="proshuto">Прошуто-фунги</string>
    <string name="price">Цена</string>
    <string name="show_all">Смотреть весь ассортимент</string>
    <string name="share_button">Поделиться</string>
</resources>