<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image"
    tools:context=".AboutFragment">

    <Button
        android:id="@+id/back_button_about"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="110sp"
        android:layout_height="40dp"
        android:text="@string/share_button"
        android:textAllCaps="false"
        android:layout_marginTop="660dp"
        android:layout_marginLeft="300dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            style="@style/OdinPizzaApp.GridTextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/company"
            android:layout_gravity="center"/>

        <TextView
            android:layout_column="2"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:layout_gravity="center"
            style="@style/OdinPizzaApp.GridTextView"/>

        <TextView
            android:layout_column="1"
            android:layout_row="2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_gravity="center"
            style="@style/OdinPizzaApp.GridTextView"/>

        <TextView
            android:layout_column="2"
            android:layout_row="2"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_gravity="center"
            style="@style/OdinPizzaApp.GridTextView"/>

        <TextView
            android:layout_column="1"
            android:layout_row="3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            style="@style/OdinPizzaApp.GridTextView"/>

        <TextView
            android:layout_column="2"
            android:layout_row="3"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/company_email_value"
            android:layout_gravity="center"
            style="@style/OdinPizzaApp.GridTextView"/>

    </GridLayout>

</FrameLayout>